# economy2.0

./: .gitignore  CMakeLists.txt  Program.cs  economyBot.csproj  program.cpp
system/: Diagnostics.h
